tests/ui/feature-gates/feature-gate-patchable-function-entry.rs
#[patchable_function_entry(entry(1), prefix(1))]
//~^ ERROR: the `#[patchable_function_entry]` attribute is an experimental feature
fn main() {}
